# bacterial-exclusion-prediction

./: .gitignore  Cargo.toml  LICENSE  README.md  shell.nix
src/: configuration.rs  main.rs
src/algorithms/: bacteria_exclusion.rs  graphene_angles.rs  helpers.rs  mod.rs  pre_processing.rs  text_recognition.rs
src/web/: mod.rs  template.html
