[package]
name = "graphene-analysis"
version = "0.2.0"
edition = "2021"

[features]
default = ["web"]
web = ["dep:handlebars", "dep:urlencoding"]

[dependencies]
clap = { version = "4.1", features = ["derive"] }
csv = "1.2"
git-version = "0.3"
handlebars = { version = "4.3", optional = true }
imageproc = "0.23"
image = "0.24"
once_cell = "1.17"
plotters = "0.3"
rayon = "1.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
urlencoding = { version = "2.1", optional = true }
